it works! except for the instructions!

--- a/main.html
+++ b/main.html
@@ -6,11 +6,13 @@
     <script src="underscore_min.js"></script>
     <script src ="counterbalancing.js"></script>
     <script src="prepareTask.js"></script>
+    <script src="instructiontext.js"></script>
     <script src="instructions.js"></script>
     <script src ="tasks.js"></script>
     <script src ="main.js"></script>
     <script src ="images.js"></script>
-    <title>Big Letter Small Letter Task</title>
+    <script src = "drawstimuli.js"></script>
+    <title>Detection Task</title>
   </head>
 
   <body>
@@ -22,15 +24,15 @@
           <p style="font-weight: bold">Please read these instructions carefully.</p>
         </div>
         <div class="instruction-body">
-          <p id="instructions1" ></p>
-          <p id="instructions2" ></p>
-          <p id="instructions3" ></p>
-          <p id="instructions4" ></p>
-          <p id="instructions5" ></p>
-          <p id="instructions6" ></p>
-          <p id="instructions7" ></p>
-          <p id="instructions8" ></p>
-          <p id="instructions9" ></p>
+          <!-- <div id="instructions1" ></div>
+          <div id="instructions2" ></div>
+          <div id="instructions3" ></div>
+          <div id="instructions4" ></div>
+          <div id="instructions5" ></div>
+          <div id="instructions6" ></div>
+          <div id="instructions7" ></div>
+          <div id="instructions8" ></div>
+          <div id="instructions9" ></div> -->
         </div>
         <div class="instruction-buttons">
           <button id="nextInstrButton">Next</button>
