--- a/main.html
+++ b/main.html
@@ -4,12 +4,13 @@
     <link rel="stylesheet" href="styles.css">
     <script src="jquery-3.4.1.js"></script>
     <script src="underscore_min.js"></script>
+    <script src ="helperfuncs.js"></script>
     <script src ="counterbalancing.js"></script>
     <script src="prepareTask.js"></script>
-    <script src="instructiontext.js"></script>
-    <script src="instructions.js"></script>
     <script src ="tasks.js"></script>
     <script src ="main.js"></script>
+    <script src="instructiontext.js"></script>
+    <script src="instructions.js"></script>
     <script src ="images.js"></script>
     <script src = "drawstimuli.js"></script>
     <title>Detection Task</title>
@@ -23,17 +24,7 @@
           <h1>Instructions </h1>
           <p style="font-weight: bold">Please read these instructions carefully.</p>
         </div>
-        <div class="instruction-body">
-          <!-- <div id="instructions1" ></div>
-          <div id="instructions2" ></div>
-          <div id="instructions3" ></div>
-          <div id="instructions4" ></div>
-          <div id="instructions5" ></div>
-          <div id="instructions6" ></div>
-          <div id="instructions7" ></div>
-          <div id="instructions8" ></div>
-          <div id="instructions9" ></div> -->
-        </div>
+        <div class="instruction-body"></div>
         <div class="instruction-buttons">
           <button id="nextInstrButton">Next</button>
           <button id="startExpButton">Start Experiment</button>
