It works...? Big if true!

--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
           <h1>Instructions </h1>
           <p style="font-weight: bold">Please read these instructions carefully.</p>
         </div>
-        <div class="instruction-body"></div>
+        <div id="instruction-body" class="instruction-body"></div>
         <div class="instruction-buttons">
           <button id="nextInstrButton">Next</button>
           <button id="startExpButton">Start Experiment</button>
