--- a/menu.html
+++ b/menu.html
@@ -15,12 +15,12 @@
 				<form id="mturk_form" method="POST" action="https://dibs-web01.vm.duke.edu/AMTSubmit/dataHandler.php">
 					<!-- <form id="mturk_form" method="POST" action="https://workersandbox.mturk.com/mturk/externalSubmit"> -->
 					<!-- <form id="mturk_form" method="POST" action="https://wwww.mturk.com/mturk/externalSubmit"> -->
-					<input type="hidden" id="assignmentId" name="assignmentId" value="">
-					<input type="hidden" id="workerId" name="workerId" value="">
-					<input type="hidden" id="hitId" name="hitId" value="">
+					<input type="hidden" id="studyID" name="studyID" value="">
+					<input type="hidden" id="workerID" name="workerID" value="">
+					<input type="hidden" id="sessionID" name="sessionID" value="">
 					<input type="hidden" id="RTs" name="RTs" value="">
-					<input type="hidden" id="demographics" name="demographics" value="TaskSwitchFlanker">
-					<input type="hidden" id="ExpName" name="ExpName" value="TaskSwitchFlanker">
+					<input type="hidden" id="demographics" name="demographics" value="FlabilityPilot">
+					<input type="hidden" id="ExpName" name="ExpName" value="FlabilityPilot">
 					<p style="font-size:22px; margin-left: 50px; margin-right:50px;">
 						Thank you for participating in this study. In this particular experiment, we were looking to see how the interference caused by switching between tasks was influenced by overlapping keys being used for both task simultaneously. By isolating these independent effects, future experiments will allow us to manipulate them in a variety of interesting ways that will help us better understand attention and cognition.
 					</p>
