--- a/public/html/demographics.html
+++ b/public/html/demographics.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script type="text/javascript" src="jquery-3.4.1.js"></script>
+    <script type="text/javascript" src="/js/jquery-3.4.1.js"></script>
     <script type="text/javascript">
       $(document).ready(function(){
         // declare data variable
@@ -26,7 +26,7 @@
       		data[3] = e.options[e.selectedIndex].value;
 
           // combine data and update menu.html code
-      		$("#demographics", opener.window.document).val(data.join(";"));
+      		$("#demographics", opener.window.document).val(data.join(","));
       		opener.updateMainMenu(1);
 
           // close window again
