--- a/public/html/main.html
+++ b/public/html/main.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html >
   <head>
-    <link rel="stylesheet" href="styles.css">
-    <script src="jquery-3.4.1.js"></script>
-    <script src="underscore_min.js"></script>
-    <script src ="helperfuncs.js"></script>
-    <script src ="counterbalancing.js"></script>
-    <script src="prepareTask.js"></script>
-    <script src ="tasks.js"></script>
-    <script src ="main.js"></script>
-    <script src="instructiontext.js"></script>
-    <script src="instructions.js"></script>
-    <script src ="images.js"></script>
-    <script src = "drawstimuli.js"></script>
+    <link rel="stylesheet" href="/css/styles.css">
+    <script src="/js/jquery-3.4.1.js"></script>
+    <script src="/js/underscore_min.js"></script>
+    <script src="/js/helperfuncs.js"></script>
+    <script src="/js/counterbalancing.js"></script>
+    <script src="/js/prepareTask.js"></script>
+    <script src="/js/tasks.js"></script>
+    <script src="/js/main.js"></script>
+    <script src="/js/instructiontext.js"></script>
+    <script src="/js/instructions.js"></script>
+    <script src= "/js/drawstimuli.js"></script>
     <title>Detection Task</title>
   </head>
 
