--- a/menu.html
+++ b/menu.html
@@ -22,12 +22,11 @@
 					<p style="font-size:22px; margin-left: 50px; margin-right:50px;">
 						Thank you for participating in this study. In this particular experiment, we were
 						 looking to see how the interference caused by switching between tasks was influenced 
-						 by overlapping keys being used for both task simultaneously. By isolating these 
-						 independent effects, future experiments will allow us to manipulate them in a 
-						 variety of interesting ways that will help us better understand attention and cognition.
+						 by the perceptual difficulty of the task cue. This will help us understand how people 
+						 use different strategies for how to allocate their attention.
 					</p>
 					<p style="font-size:22px; margin-left: 50px; margin-right:50px;">
-						If you would like to know more about or have any other questions about this experiment or your data, please feel free to contact me at rmg55@duke.edu or the principal investigator Tobias Egner at tobias.egner@duke.edu. Thank you so much for your participation!
+						If you would like to know more about or have any other questions about this experiment or your data, please feel free to contact me at sm378@duke.edu or the principal investigator Tobias Egner at tobias.egner@duke.edu. Thank you so much for your participation!
 					</p>
 					<p style="font-size:24px">
 						Please click the "Submit" button to upload your data and recieve your completion code.
