please hit the submit button

--- a/menu.html
+++ b/menu.html
@@ -29,7 +29,7 @@
 						If you would like to know more about or have any other questions about this experiment or your data, please feel free to contact me at sm378@duke.edu or the principal investigator Tobias Egner at tobias.egner@duke.edu. Thank you so much for your participation!
 					</p>
 					<p style="font-size:24px">
-						Please click the "Submit" button to upload your data and recieve your completion code.
+						<strong>Please click the "Submit" button to upload your data and recieve your completion code.</strong>
 					</p>
 					<input id="submitButton" type="submit" name="Finish" onclick="showCode()">
 				</form>
