oops should have pushed these a long time ago

--- a/menu.html
+++ b/menu.html
@@ -17,8 +17,8 @@
 					<input type="hidden" id="workerID" name="workerID" value="">
 					<input type="hidden" id="sessionID" name="sessionID" value="">
 					<input type="hidden" id="RTs" name="RTs" value="">
-					<input type="hidden" id="demographics" name="demographics" value="FlabilityPilot">
-					<input type="hidden" id="ExpName" name="ExpName" value="FlabilityPilot">
+					<input type="hidden" id="demographics" name="demographics" value="flabilityPilotProlific">
+					<input type="hidden" id="ExpName" name="ExpName" value="flabilityPilotProlific">
 					<p style="font-size:22px; margin-left: 50px; margin-right:50px;">
 						Thank you for participating in this study. In this particular experiment, we were
 						 looking to see how the interference caused by switching between tasks was influenced 
