--- a/public/html/consent.html
+++ b/public/html/consent.html
@@ -35,7 +35,7 @@
         <h4>PROCEDURE</h4>
         <p>
             In this experiment, you will be asked to categorize different visual stimuli according to one or more task rules. 
-            For example, you may be asked to categorize numbers as odd or even or as greater or less than 5. 
+            For example, you may be asked whether a group of objects based on their shape, or based on their color. 
             Sometimes, the task rule switches between trials, and sometimes it stays the same. 
             You may also be asked to choose the task you want to perform. 
             The entire experiment is expected to take 25 minutes.
