--- a/menu.html
+++ b/menu.html
@@ -31,7 +31,7 @@
 						If you would like to know more about or have any other questions about this experiment or your data, please feel free to contact me at sm378@duke.edu or the principal investigator Tobias Egner at tobias.egner@duke.edu. Thank you so much for your participation!
 					</p>
 					<p style="font-size:24px">
-						<strong>Please click the "Submit" button to upload your data and recieve your completion code.</strong>
+						<strong>Please click the "Submit" button to upload your data and recieve your completion link.</strong>
 					</p>
 					<input id="submitButton" type="submit" name="Finish" onclick="showCode()">
 				</form>
@@ -40,11 +40,9 @@
 	</table>
 	<script>
 		function showCode() {
-
-			window.location.href="https://duke-psy-credit.sona-systems.com/webstudy_credit.aspx?experiment_id=1677&credit_token=6f2fedb2b71b448d9d122b833ba29b0f&survey_code=" + document.getElementById('surveyCode').value
-			// $('#submitButton').hide();
-			// $('#mainForm').append("<p>Thank you for participating." +
-			// 	"Please follow this link to receive course credit.</p>")
+			$('#submitButton').hide();
+			let completionLink = new URL('https://duke-psy-credit.sona-systems.com/webstudy_credit.aspx?experiment_id=1677&credit_token=6f2fedb2b71b448d9d122b833ba29b0f&survey_code=' + document.getElementById('surveyCode').value);
+			$('#mainForm').append("<p>Thank you for participating. <a href=" + completionLink + ">Please use this link to return to SONA and recieve credit.</a></p>")
 		}
 	</script>
 </body>
