--- a/public/html/demographics.html
+++ b/public/html/demographics.html
@@ -13,10 +13,6 @@
       		// data.push(e.options[e.selectedIndex].value);
 			data.push($('#gender').val());
       		data.push($('#dob').val());
-			data.push($('#first').val());
-			data.push($('#middle').val());
-			data.push($('#last').val());
-			data.push($('#birthplace').val());
       		data.push($('#ethnicity').val());
       		data.push($('#race').val());
 
@@ -38,23 +34,12 @@
 		<option hidden disabled selected value>  </option>
   		<option value="F">Female</option>
   		<option value="M">Male</option>
+		<option value="O">None of the above</option>
   		<option value="NA">Do not wish to respond</option>
   	</select>
 
   	<p><b> Date of birth: (leave blank if you do not wish to respond)</b></p>
-	<input type="date" id="dob" min="1900-01-01" max="2006-01-01"/>
-
-	<p><b> First name: (leave blank if you do not wish to respond)</b></p>
-  	<input id="first"></input>
-	
-	<p><b> Middle name: (leave blank if you do not wish to respond or do not have a middle name)</b></p>
-  	<input id="middle" value=""></input>
-
-	<p><b> Last name: (leave blank if you do not wish to respond)</b></p>
-  	<input id="last" value=""></input>
-
-	<p><b> City/Municipality of Birth: (leave blank if you do not wish to respond)</b></p>
-  	<input id="birthplace" value=""></input>
+	<input type="date" id="dob" min="1900-01-01" max="2010-01-01"/>
 
   	<p><b>Ethnicity:</b></p>
   	<select id="ethnicity">
@@ -73,7 +58,7 @@
   		<option value="AA">African Ameirican/Black</option>
   		<option value="W">Caucasian/White</option>
   		<option value="M">Multiracial</option>
-  		<option value="O">Other</option>
+  		<option value="O">None of the above</option>
   		<option value="NA">Do not wish to respond</option>
   	</select>
   	<br>
